<resources>
    <string name="app_name">File Maze</string>
    <string name="nomedia">Shield media scanning</string>
    <string name="dir_name_length">file name length</string>
    <string name="dir_count">the number of single-layer folders</string>
    <string name="max">Maximum</string>
    <string name="min">Minimum</string>
    <string name="dir_layers_count">folder layer number</string>
    <string name="use_number">contains numbers</string>
    <string name="use_lowercase">contains lowercase letters</string>
    <string name="use_uppercase">contains uppercase letters</string>
    <string name="make_dirs">generate</string>
    <string name="max_less_than_min">The maximum number of files cannot be less than the minimum number of files</string>
    <string name="expected_generation_results">is expected to generate %1$d files</string>
    <string name="expected_generation_results2">is expected to generate %1$d-%2$d files</string>
    <string name="select_at_least_one">choose at least one file name element</string>
    <string name="too_few_elements">Too few file name elements may produce duplicate results</string>
    <string name="no_permission">We need permissions to create folders in your storage space</string>
    <string name="mkdir_start">ready to start creating a folder</string>
    <string name="mkdir_end">The folder is created, a total of %1$d files are created, located at: %2$s</string>
    <string name="zip_dir_end">The compressed folder is completed, located at: %1$s</string>
    <string name="dir_path_hint">"/storage/emulated/0" in the folder path indicates the root directory of the device storage space. If your device supports SD card, it means the built-in storage space of the device</string>
    <string name="make_new">has been created: %1$s</string>
    <string name="zip_dir_start">start to compress the folder</string>
    <string name="error">something went wrong</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="guide_step_pwd">Password is a code with hidden logic. \nFor those who don\'t know the logic, this is a bunch of garbled characters.</string>
    <string name="guide_step_name">In each paragraph of text, if we only look at the content in certain positions, then they may be spliced into meaningful content. \nSuppose, each paragraph of text is a file name?</string>
    <string name="guide_step_tree">If there are four files in a folder, then there are four choices. \nIf there are four more folders in each folder, then there are 16 choices. \nWhat if there are 4 folders inside?</string>
    <string name="zip">compressed folder</string>
</resources>